--- a/AdSanare.Core/Views/Administration/EditUsersInRole.cshtml
+++ b/AdSanare.Core/Views/Administration/EditUsersInRole.cshtml
@@ -6,7 +6,7 @@
 
 
 <form method="post">
-    <div class="card">
+    <div class="card card-maroon">
         <div class="card-header">
             <h2>Agregar o eliminar usuarios de este rol</h2>
         </div>
@@ -23,7 +23,7 @@
                 </div>
             }
         </div>
-        <div class="card-footer">
+        <div class="card-footer text-center">
             <input type="submit" value="Actualizar" class="btn btn-primary" style="width:auto" />
             <a asp-action="EditRole" asp-route-id="@roleId" class="btn btn-primary" style="width:auto">Cancelar</a>
         </div>
