--- a/AdSanare.Core/Views/ExamenComplementario/Index.cshtml
+++ b/AdSanare.Core/Views/ExamenComplementario/Index.cshtml
@@ -21,14 +21,14 @@
         }
     </script>
 }
-<h1>Listado de Examenes Complementarios</h1>
-<div class="card">
+<br />
+<div class="card card-maroon">
     <div class="card-header">
         <h3 class="card-title">Lista de Examenes Complementarios</h3>
         <div class="card-tools">
             <div class="input-group input-group-sm" style="width: 150px;">
                 <div class="input-group input-group-sm pull-right">
-                    <a class="btn btn-primary btn-sm" asp-controller="ExamenComplementario" asp-action="Create" title="Agregar Examen Complementario"><i class="fas fa-plus">Nuevo</i></a>
+                    <a class="btn btn-success" asp-controller="ExamenComplementario" asp-action="Create" title="Agregar Examen Complementario"><i class="fas fa-plus">Nuevo</i></a>
                 </div>
             </div>
         </div>
