--- a/AdSanare.Core/Views/Paciente/Index.cshtml
+++ b/AdSanare.Core/Views/Paciente/Index.cshtml
@@ -18,8 +18,8 @@
         });
     </script>
 }
-<h1>Listado de Pacientes</h1>
-<div class="card card-blue">
+<br />
+<div class="card card-maroon">
     <div class="card-header">
         <h3 class="card-title">Buscador</h3>
         <div class="card-tools">
@@ -48,9 +48,9 @@
             </div>
         </div>
     </div>
-    <div class="card-footer">
+    <div class="card-footer text-center">
             <div class="col-md-3">
-                <a class="btn btn-block btn-primary" id="btnBuscarDocumentacion"><i class="fa fa-search"><span class="hidden-xs"> Buscar</span></i></a>
+                <button type="button" data-card-widget="collapse" class="btn btn-block btn-primary" id="btnBuscarDocumentacion"><i class="fa fa-search">Buscar</i></button>
             </div>
     </div>
  </div>
