--- a/AdSanare.Core/Views/Servicio/Create.cshtml
+++ b/AdSanare.Core/Views/Servicio/Create.cshtml
@@ -1,18 +1,24 @@
 ﻿@model AdSanare.Entities.Servicio
 </br>
-<div class="card card-primary">
+<div class="card card-maroon">
     <div class="card-header">
         <h3 class="card-title">Agregar Servicio</h3>
     </div>
     <form asp-antiforgery="true" asp-action="Create" method="post">
         <div class="card-body">
-            <div class="form-group">
-                <label asp-for="Descripcion"></label>
-                <input class="form-control" asp-for="Descripcion">
-                <span class="text-danger" asp-validation-for="Descripcion"></span>
+            <div class="row">
+                <div class="col-md-3"></div>
+                <div class="col-md-6">
+                    <div class="form-group">
+                        <label asp-for="Descripcion"></label>
+                        <input class="form-control" asp-for="Descripcion">
+                        <span class="text-danger" asp-validation-for="Descripcion"></span>
+                    </div>
+                </div>
+                <div class="col-md-3"></div>
             </div>
         </div>
-        <div class="card-footer">
+        <div class="card-footer text-center">
             <button type="submit" class="btn btn-primary">Agregar</button>
         </div>
     </form>
