--- a/AdSanare.Core/Views/Usuarios/Edit.cshtml
+++ b/AdSanare.Core/Views/Usuarios/Edit.cshtml
@@ -1,48 +1,67 @@
 ﻿@model AdSanare.Entities.Usuario
-<div class="card card-primary">
+<br />
+<div class="card card-maroon">
     <div class="card-header">
         <h3 class="card-title">Editar Usuario</h3>
     </div>
     <form asp-antiforgery="true" asp-action="Edit" method="post">
         <input type="hidden" class="form-control" asp-for="Id">
         <div class="card-body">
-            <div class="form-group">
-                <label asp-for="Name">Nombre</label>
-                <input class="form-control" asp-for="Name">
-                <span class="text-danger" asp-validation-for="Name"></span>
+            <div class="row">
+                <div class="col-md-4">
+                    <div class="form-group">
+                        <label asp-for="Name">Nombre</label>
+                        <input class="form-control" asp-for="Name">
+                        <span class="text-danger" asp-validation-for="Name"></span>
+                    </div>
+                </div>
+                <div class="col-md-4">
+                    <div class="form-group">
+                        <label asp-for="LastName">Apellido</label>
+                        <input class="form-control" asp-for="LastName">
+                        <span class="text-danger" asp-validation-for="LastName"></span>
+                    </div>
+                </div>
+                <div class="col-md-4">
+                    <div class="form-group">
+                        <label asp-for="Email"></label>
+                        <input class="form-control" asp-for="Email">
+                        <span class="text-danger" asp-validation-for="Email"></span>
+                    </div>
+                </div>
             </div>
-            <div class="form-group">
-                <label asp-for="LastName">Apellido</label>
-                <input class="form-control" asp-for="LastName">
-                <span class="text-danger" asp-validation-for="LastName"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="Email"></label>
-                <input class="form-control" asp-for="Email">
-                <span class="text-danger" asp-validation-for="Email"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="UserName">Nombre de Usuario</label>
-                <input class="form-control" asp-for="UserName">
-                <span class="text-danger" asp-validation-for="UserName"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="EmployeeFileNumber">N° Legajo</label>
-                <input class="form-control" asp-for="EmployeeFileNumber">
-                <span class="text-danger" asp-validation-for="EmployeeFileNumber"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="PhoneNumber">N° Telefono</label>
-                <input class="form-control" asp-for="PhoneNumber">
-                <span class="text-danger" asp-validation-for="PhoneNumber"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="PasswordHash">Contraseña</label>
-                <input type="password" class="form-control" asp-for="PasswordHash">
-                <span class="text-danger" asp-validation-for="PasswordHash"></span>
+            <div class="row">
+                <div class="col-md-3">
+                    <div class="form-group">
+                        <label asp-for="UserName">Nombre de Usuario</label>
+                        <input class="form-control" asp-for="UserName">
+                        <span class="text-danger" asp-validation-for="UserName"></span>
+                    </div>
+                </div>
+                <div class="col-md-3">
+                    <div class="form-group">
+                        <label asp-for="EmployeeFileNumber">N° Legajo</label>
+                        <input class="form-control" asp-for="EmployeeFileNumber">
+                        <span class="text-danger" asp-validation-for="EmployeeFileNumber"></span>
+                    </div>
+                </div>
+                <div class="col-md-3">
+                    <div class="form-group">
+                        <label asp-for="PhoneNumber">N° Telefono</label>
+                        <input class="form-control" asp-for="PhoneNumber">
+                        <span class="text-danger" asp-validation-for="PhoneNumber"></span>
+                    </div>
+                </div>
+                <div class="col-md-3">
+                    <div class="form-group">
+                        <label asp-for="PasswordHash">Contraseña</label>
+                        <input type="password" class="form-control" asp-for="PasswordHash">
+                        <span class="text-danger" asp-validation-for="PasswordHash"></span>
+                    </div>
+                </div>
             </div>
         </div>
-        <div class="card-footer">
+        <div class="card-footer text-center">
             <button type="submit" class="btn btn-primary">Agregar</button>
         </div>
     </form>
