--- a/AdSanare.Core/Views/Usuarios/Index.cshtml
+++ b/AdSanare.Core/Views/Usuarios/Index.cshtml
@@ -15,14 +15,14 @@
         });
     </script>
 }
-<h1>Listado de Usuarios</h1>
-<div class="card">
+<br />
+<div class="card card-maroon">
     <div class="card-header">
         <h3 class="card-title">Lista de Usuarios</h3>
         <div class="card-tools">
             <div class="input-group input-group-sm" style="width: 150px;">
                 <div class="input-group input-group-sm pull-right">
-                    <a class="btn btn-primary btn-sm" asp-controller="Usuarios" asp-action="Create" title="Agregar Usuario"><i class="fas fa-plus">Nuevo</i></a>
+                    <a class="btn btn-success" asp-controller="Usuarios" asp-action="Create" title="Agregar Usuario"><i class="fas fa-plus">Nuevo</i></a>
                 </div>
             </div>
         </div>
