--- a/AdSanare.Core/Views/Administration/ListRoles.cshtml
+++ b/AdSanare.Core/Views/Administration/ListRoles.cshtml
@@ -16,13 +16,13 @@
     </script>
 }
 <h1>Administración de roles de usuario.</h1>
-<div class="card">
+<div class="card card-maroon">
     <div class="card-header">
         <h3 class="card-title">Lista de Roles</h3>
         <div class="card-tools">
             <div class="input-group input-group-sm" style="width: 150px;">
                 <div class="input-group input-group-sm pull-right">
-                    <a class="btn btn-primary btn-sm" asp-controller="Administration" asp-action="CreateRole" title="Crear Rol"><i class="fas fa-plus">Nuevo Rol</i></a>
+                    <a class="btn btn-success" asp-controller="Administration" asp-action="CreateRole" title="Crear Rol"><i class="fas fa-plus">Nuevo Rol</i></a>
                 </div>
             </div>
         </div>
