--- a/AdSanare.Core/Views/Cama/Edit.cshtml
+++ b/AdSanare.Core/Views/Cama/Edit.cshtml
@@ -1,19 +1,26 @@
 ﻿@model AdSanare.Entities.Cama
+    <br />
     <div class="container-fluid">
-        <div class="card card-primary">
+        <div class="card card-maroon">
             <div class="card-header">
                 <h3 class="card-title">Editar Cama</h3>
             </div>
             <form asp-antiforgery="true" asp-action="Edit" method="post">
                 <input type="hidden" class="form-control" asp-for="Id" />
                 <div class="card-body">
-                    <div class="form-group">
-                        <label asp-for="Descripcion"></label>
-                        <input class="form-control" asp-for="Descripcion">
-                        <span class="text-danger" asp-validation-for="Descripcion"></span>
+                    <div class="row">
+                        <div class="col-md-3"></div>
+                        <div class="col-md-6">
+                            <div class="form-group">
+                                <label asp-for="Descripcion"></label>
+                                <input class="form-control" asp-for="Descripcion">
+                                <span class="text-danger" asp-validation-for="Descripcion"></span>
+                            </div>
+                        </div>
+                        <div class="col-md-3"></div>
                     </div>
                 </div>
-                <div class="card-footer">
+                <div class="card-footer text-center">
                     <button type="submit" class="btn btn-primary">Guardar</button>
                 </div>
             </form>
