--- a/AdSanare.Core/Views/Cama/Index.cshtml
+++ b/AdSanare.Core/Views/Cama/Index.cshtml
@@ -1,11 +1,11 @@
 ﻿@model List<AdSanare.Entities.Cama>
-<div class="card">
+<div class="card card-maroon">
     <div class="card-header">
         <h3 class="card-title">Lista de Camas</h3>
         <div class="card-tools">
             <div class="input-group input-group-sm" style="width: 150px;">
                 <div class="input-group input-group-sm pull-right">
-                    <a class="btn btn-primary btn-sm" asp-controller="Cama" asp-action="Create" asp-route-ServicioId="@ViewBag.ServicioId" title="Agregar Cama"><i class="fas fa-plus">Nuevo</i></a>
+                    <a class="btn btn-success" asp-controller="Cama" asp-action="Create" asp-route-ServicioId="@ViewBag.ServicioId" title="Agregar Cama"><i class="fas fa-plus">Nuevo</i></a>
                 </div>
             </div>
         </div>
