--- a/AdSanare.Core/Views/Evolucion/Details.cshtml
+++ b/AdSanare.Core/Views/Evolucion/Details.cshtml
@@ -1,68 +1,96 @@
 ﻿@model AdSanare.Entities.Evolucion
-    </br>
-    <div class="card card-primary">
+    <br />
+    <div class="card card-maroon">
         <div class="card-header">
             <h3 class="card-title">Detalle del Evolucion</h3>
         </div>
         <div class="card-body">
-            <div class="form-group">
-                <label asp-for="Ingreso.Paciente.Nombre"></label>
-                <input disabled class="form-control" asp-for="Ingreso.Paciente.Nombre">
+            <div class="row">
+                <div class="col-md-4">
+                    <div class="form-group">
+                        <label asp-for="Ingreso.Paciente.Nombre"></label>
+                        <input disabled class="form-control" asp-for="Ingreso.Paciente.Nombre">
+                    </div>
+                </div>
+                <div class="col-md-4">
+                    <div class="form-group">
+                        <label asp-for="Ingreso.Paciente.Apellido"></label>
+                        <input disabled class="form-control" asp-for="Ingreso.Paciente.Apellido">
+                    </div>
+                </div>
+                <div class="col-md-4">
+                    <div class="form-group">
+                        <label asp-for="Ingreso.Paciente.Documento"></label>
+                        <input disabled class="form-control" asp-for="Ingreso.Paciente.Documento">
+                    </div>
+                </div>
             </div>
-            <div class="form-group">
-                <label asp-for="Ingreso.Paciente.Apellido"></label>
-                <input disabled class="form-control" asp-for="Ingreso.Paciente.Apellido">
+            <div class="row">
+                <div class="col-md-4">
+                    <div class="form-group">
+                        <label asp-for="Ingreso.FechaIngreso"></label>
+                        <input disabled class="form-control" asp-for="Ingreso.FechaIngreso">
+                    </div>
+                    <div class="form-group">
+                        <label asp-for="FechaEvolucion"></label>
+                        <input disabled class="form-control" asp-for="FechaEvolucion">
+                    </div>
+                </div>
+                <div class="col-md-8">
+                    <div class="form-group">
+                        <label asp-for="Ingreso.Diagnostico"></label>
+                        <textarea disabled class="form-control" asp-for="Ingreso.Diagnostico" rows="6"></textarea>
+                    </div>
+                </div>
             </div>
-            <div class="form-group">
-                <label asp-for="Ingreso.Paciente.Documento"></label>
-                <input disabled class="form-control" asp-for="Ingreso.Paciente.Documento">
+            <div class="row">
+                <div class="col-md-4">
+                    <div class="form-group">
+                        <label asp-for="ServicioInternacion"></label>
+                        <input disabled class="form-control" asp-for="ServicioInternacion.Descripcion">
+                    </div>
+                    <div class="form-group">
+                        <label asp-for="CamaInternacion"></label>
+                        <input disabled class="form-control" asp-for="CamaInternacion.Descripcion">
+                    </div>
+                </div>
+                <div class="col-md-8">
+                    <div class="form-group">
+                        <label asp-for="ExamenFisico.EstadoActual"></label>
+                        <textarea disabled class="form-control" asp-for="ExamenFisico.EstadoActual" rows="6"></textarea>
+                    </div>
+                </div>
             </div>
-            <div class="form-group">
-                <label asp-for="Ingreso.FechaIngreso"></label>
-                <input disabled class="form-control" asp-for="Ingreso.FechaIngreso">
-            </div>
-            <div class="form-group">
-                <label asp-for="Ingreso.Diagnostico"></label>
-                <input disabled class="form-control" asp-for="Ingreso.Diagnostico">
-            </div>
-            <div class="form-group">
-                <label asp-for="FechaEvolucion"></label>
-                <input disabled class="form-control" asp-for="FechaEvolucion">
-            </div>
-            <div class="form-group">
-                <label asp-for="ServicioInternacion"></label>
-                <input disabled class="form-control" asp-for="ServicioInternacion.Descripcion">
-            </div>
-            <div class="form-group">
-                <label asp-for="CamaInternacion"></label>
-                <input disabled class="form-control" asp-for="CamaInternacion.Descripcion">
-            </div>
-            <div class="form-group">
-                <label asp-for="ExamenFisico.EstadoActual"></label>
-                <input disabled class="form-control" asp-for="ExamenFisico.EstadoActual">
-            </div>
-            <div class="form-group">
-                <label asp-for="ExamenFisico.FrecuenciaCardiaca"></label>
-                <input disabled class="form-control" asp-for="ExamenFisico.FrecuenciaCardiaca">
-            </div>
-            <div class="form-group">
-                <label asp-for="ExamenFisico.TensionArterial"></label>
-                <input disabled class="form-control" asp-for="ExamenFisico.TensionArterial">
-            </div>
-            <div class="form-group">
-                <label asp-for="ExamenFisico.FrecuenciaRespiratoria"></label>
-                <input disabled class="form-control" asp-for="ExamenFisico.FrecuenciaRespiratoria">
-            </div>
-            <div class="form-group">
-                <label asp-for="ExamenFisico.SaturacionOxigeno"></label>
-                <input disabled class="form-control" asp-for="ExamenFisico.SaturacionOxigeno">
-            </div>
-            <div class="form-group">
-                <label asp-for="ExamenFisico.Temperatura"></label>
-                <input disabled class="form-control" asp-for="ExamenFisico.Temperatura">
+            <div class="row">
+                <div class="col-md-4">
+                    <div class="form-group">
+                        <label asp-for="ExamenFisico.FrecuenciaCardiaca"></label>
+                        <input disabled class="form-control" asp-for="ExamenFisico.FrecuenciaCardiaca">
+                    </div>
+                    <div class="form-group">
+                        <label asp-for="ExamenFisico.TensionArterial"></label>
+                        <input disabled class="form-control" asp-for="ExamenFisico.TensionArterial">
+                    </div>
+                </div>
+                <div class="col-md-4">
+                    <div class="form-group">
+                        <label asp-for="ExamenFisico.FrecuenciaRespiratoria"></label>
+                        <input disabled class="form-control" asp-for="ExamenFisico.FrecuenciaRespiratoria">
+                    </div>
+                    <div class="form-group">
+                        <label asp-for="ExamenFisico.SaturacionOxigeno"></label>
+                        <input disabled class="form-control" asp-for="ExamenFisico.SaturacionOxigeno">
+                    </div>
+                </div>
+                <div class="col-md-4">
+                    <div class="form-group">
+                        <label asp-for="ExamenFisico.Temperatura"></label>
+                        <input disabled class="form-control" asp-for="ExamenFisico.Temperatura">
+                    </div>
+                </div>
             </div>
         </div>
-        <div class="card-footer">
+        <div class="card-footer text-center">
             <button type="button" class="btn btn-primary" data-dismiss="modal">Cerrar</button>
         </div>
     </div>
