--- a/AdSanare.Core/Views/Evolucion/Edit.cshtml
+++ b/AdSanare.Core/Views/Evolucion/Edit.cshtml
@@ -1,6 +1,7 @@
 ﻿@model AdSanare.Entities.Evolucion
+    <br />
     <div class="container-fluid">
-        <div class="card card-primary">
+        <div class="card card-maroon">
             <div class="card-header">
                 <h3 class="card-title">Editar Evolucion</h3>
             </div>
@@ -9,53 +10,69 @@
                 <input type="hidden" class="form-control" asp-for="Ingreso.Id" />
                 <input type="hidden" class="form-control" asp-for="ExamenFisico.Id" />
                 <div class="card-body">
-                    <div class="form-group">
-                        <label asp-for="FechaEvolucion"></label>
-                        <input class="form-control" asp-for="FechaEvolucion">
-                        <span class="text-danger" asp-validation-for="FechaEvolucion"></span>
+                    <div class="row">
+                        <div class="col-md-4">
+                            <div class="form-group">
+                                <label asp-for="FechaEvolucion"></label>
+                                <input class="form-control" asp-for="FechaEvolucion">
+                                <span class="text-danger" asp-validation-for="FechaEvolucion"></span>
+                            </div>
+                        </div>
+                        <div class="col-md-4">
+                            <div class="form-group">
+                                <label asp-for="ServicioInternacion" class="control-label"></label>
+                                <select class="form-control" asp-for="ServicioInternacion.Id" asp-items="@ViewBag.Servicios" title="Seleccione el Servicio de Internación Correspondientes"></select>
+                                <span asp-validation-for="ServicioInternacion" class="text-danger"></span>
+                            </div>
+                        </div>
+                        <div class="col-md-4">
+                            <div class="form-group">
+                                <label asp-for="CamaInternacion" class="control-label"></label>
+                                <select class="form-control" asp-for="CamaInternacion.Id" asp-items="@ViewBag.Camas" title="Seleccione la Cama de Internación Correspondientes"></select>
+                                <span asp-validation-for="CamaInternacion" class="text-danger"></span>
+                            </div>
+                        </div>
                     </div>
-                    <div class="form-group">
-                        <label asp-for="ServicioInternacion" class="control-label"></label>
-                        <select class="form-control" asp-for="ServicioInternacion.Id" asp-items="@ViewBag.Servicios" title="Seleccione el Servicio de Internación Correspondientes"></select>
-                        <span asp-validation-for="ServicioInternacion" class="text-danger"></span>
-                    </div>
-                    <div class="form-group">
-                        <label asp-for="CamaInternacion" class="control-label"></label>
-                        <select class="form-control" asp-for="CamaInternacion.Id" asp-items="@ViewBag.Camas" title="Seleccione la Cama de Internación Correspondientes"></select>
-                        <span asp-validation-for="CamaInternacion" class="text-danger"></span>
-                    </div>
-                    <div class="form-group">
-                        <label asp-for="ExamenFisico.EstadoActual"></label>
-                        <input class="form-control" asp-for="ExamenFisico.EstadoActual">
-                        <span class="text-danger" asp-validation-for="ExamenFisico.EstadoActual"></span>
-                    </div>
-                    <div class="form-group">
-                        <label asp-for="ExamenFisico.FrecuenciaCardiaca"></label>
-                        <input class="form-control" asp-for="ExamenFisico.FrecuenciaCardiaca">
-                        <span class="text-danger" asp-validation-for="ExamenFisico.FrecuenciaCardiaca"></span>
-                    </div>
-                    <div class="form-group">
-                        <label asp-for="ExamenFisico.TensionArterial"></label>
-                        <input class="form-control" asp-for="ExamenFisico.TensionArterial">
-                        <span class="text-danger" asp-validation-for="ExamenFisico.TensionArterial"></span>
-                    </div>
-                    <div class="form-group">
-                        <label asp-for="ExamenFisico.FrecuenciaRespiratoria"></label>
-                        <input class="form-control" asp-for="ExamenFisico.FrecuenciaRespiratoria">
-                        <span class="text-danger" asp-validation-for="ExamenFisico.FrecuenciaRespiratoria"></span>
-                    </div>
-                    <div class="form-group">
-                        <label asp-for="ExamenFisico.SaturacionOxigeno"></label>
-                        <input class="form-control" asp-for="ExamenFisico.SaturacionOxigeno">
-                        <span class="text-danger" asp-validation-for="ExamenFisico.SaturacionOxigeno"></span>
-                    </div>
-                    <div class="form-group">
-                        <label asp-for="ExamenFisico.Temperatura"></label>
-                        <input class="form-control" asp-for="ExamenFisico.Temperatura">
-                        <span class="text-danger" asp-validation-for="ExamenFisico.Temperatura"></span>
+                    <div class="row">
+                        <div class="col-md-6">
+                            <div class="form-group">
+                                <label asp-for="ExamenFisico.EstadoActual"></label>
+                                <textarea class="form-control" asp-for="ExamenFisico.EstadoActual" rows="8"></textarea>
+                                <span class="text-danger" asp-validation-for="ExamenFisico.EstadoActual"></span>
+                            </div>
+                        </div>
+                        <div class="col-md-3">
+                            <div class="form-group">
+                                <label asp-for="ExamenFisico.FrecuenciaCardiaca"></label>
+                                <input class="form-control" asp-for="ExamenFisico.FrecuenciaCardiaca">
+                                <span class="text-danger" asp-validation-for="ExamenFisico.FrecuenciaCardiaca"></span>
+                            </div>
+                            <div class="form-group">
+                                <label asp-for="ExamenFisico.TensionArterial"></label>
+                                <input class="form-control" asp-for="ExamenFisico.TensionArterial">
+                                <span class="text-danger" asp-validation-for="ExamenFisico.TensionArterial"></span>
+                            </div>
+                            <div class="form-group">
+                                <label asp-for="ExamenFisico.FrecuenciaRespiratoria"></label>
+                                <input class="form-control" asp-for="ExamenFisico.FrecuenciaRespiratoria">
+                                <span class="text-danger" asp-validation-for="ExamenFisico.FrecuenciaRespiratoria"></span>
+                            </div>
+                        </div>
+                        <div class="col-md-3">
+                            <div class="form-group">
+                                <label asp-for="ExamenFisico.SaturacionOxigeno"></label>
+                                <input class="form-control" asp-for="ExamenFisico.SaturacionOxigeno">
+                                <span class="text-danger" asp-validation-for="ExamenFisico.SaturacionOxigeno"></span>
+                            </div>
+                            <div class="form-group">
+                                <label asp-for="ExamenFisico.Temperatura"></label>
+                                <input class="form-control" asp-for="ExamenFisico.Temperatura">
+                                <span class="text-danger" asp-validation-for="ExamenFisico.Temperatura"></span>
+                            </div>
+                        </div>
                     </div>
                 </div>
-                <div class="card-footer">
+                <div class="card-footer text-center">
                     <button type="submit" class="btn btn-primary">Guardar</button>
                 </div>
             </form>
