--- a/AdSanare.Core/Views/ExamenComplementario/Create.cshtml
+++ b/AdSanare.Core/Views/ExamenComplementario/Create.cshtml
@@ -23,38 +23,57 @@
         })
     </script>
 }
-</br>
-<div class="card card-primary">
+<br />
+<div class="card card-maroon">
     <div class="card-header">
         <h3 class="card-title">Agregar Examen Complementario</h3>
     </div>
     <form asp-antiforgery="true" asp-action="Create" method="post">
         <div class="card-body">
-            <div class="form-group">
-                <label asp-for="Paciente.Documento" class="control-label">Numero de Documento del Paciente</label>
-                <input id="DniPaciente" asp-for="Paciente.Documento" class="form-control control-label" placeholder="Ingrese el numero de documento del Paciente" />
-                <span asp-validation-for="Paciente" class="text-danger"></span>
-                <br />
-                <input type="button" id="BuscarDni" class="btn btn-primary form-control control-label" value="Buscar">
+            <div class="row">
+                <div class="col-md-4">
+                    <div class="form-group">
+                        <label asp-for="Paciente.Documento" class="control-label">Numero de Documento del Paciente</label>
+                        <input id="DniPaciente" asp-for="Paciente.Documento" class="form-control control-label" placeholder="Ingrese el numero de documento del Paciente" />
+                        <span asp-validation-for="Paciente" class="text-danger"></span>
+                    </div>
+                </div>
+                <div class="col-md-1"></div>
+                <div class="col-md-2">
+                    <br />
+                    <input type="button" id="BuscarDni" class="btn btn-primary form-control control-label" value="Buscar">
+                </div>
+                <div class="col-md-4"></div>
             </div>
             <div id="DivPaciente"></div>
-            <div class="form-group">
-                <label asp-for="FechaExamen"></label>
-                <input class="form-control" asp-for="FechaExamen">
-                <span class="text-danger" asp-validation-for="FechaExamen"></span>
+            <div class="row">
+                <div class="col-md-4">
+                    <div class="form-group">
+                        <label asp-for="FechaExamen"></label>
+                        <input class="form-control" asp-for="FechaExamen">
+                        <span class="text-danger" asp-validation-for="FechaExamen"></span>
+                    </div>
+                </div>
+                <div class="col-md-4">
+                    <div class="form-group">
+                        <label asp-for="TipoExamen"></label>
+                        <input class="form-control" asp-for="TipoExamen">
+                        <span class="text-danger" asp-validation-for="TipoExamen"></span>
+                    </div>
+                </div>
+                <div class="col-md-4"></div>
             </div>
-            <div class="form-group">
-                <label asp-for="TipoExamen"></label>
-                <input class="form-control" asp-for="TipoExamen">
-                <span class="text-danger" asp-validation-for="TipoExamen"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="Detalle"></label>
-                <input class="form-control" asp-for="Detalle">
-                <span class="text-danger" asp-validation-for="Detalle"></span>
+            <div class="row">
+                <div class="col-md-12">
+                    <div class="form-group">
+                        <label asp-for="Detalle"></label>
+                        <textarea class="form-control" asp-for="Detalle" rows="6"></textarea>
+                        <span class="text-danger" asp-validation-for="Detalle"></span>
+                    </div>
+                </div>
             </div>
         </div>
-        <div class="card-footer">
+        <div class="card-footer text-center">
             <button type="submit" class="btn btn-primary">Agregar</button>
         </div>
     </form>
