--- a/AdSanare.Core/Views/ExamenComplementario/Details.cshtml
+++ b/AdSanare.Core/Views/ExamenComplementario/Details.cshtml
@@ -1,42 +1,54 @@
 ﻿@model AdSanare.Entities.ExamenComplementario
     </br>
-    <div class="card card-primary">
+    <div class="card card-maroon">
         <div class="card-header">
             <h3 class="card-title">Detalle del Examen Complementario</h3>
         </div>
         <div class="card-body">
-            <div class="form-group">
-                <label asp-for="Paciente.Nombre"></label>
-                <input disabled class="form-control" asp-for="Paciente.Nombre">
-                <span class="text-danger" asp-validation-for="Paciente.Nombre"></span>
+            <div class="row">
+                <div class="col-md-4">
+                    <div class="form-group">
+                        <label asp-for="Paciente.Nombre"></label>
+                        <input disabled class="form-control" asp-for="Paciente.Nombre">
+                    </div>
+                </div>
+                <div class="col-md-4">
+                    <div class="form-group">
+                        <label asp-for="Paciente.Apellido"></label>
+                        <input disabled class="form-control" asp-for="Paciente.Apellido">
+                    </div>
+                </div>
+                <div class="col-md-4">
+                    <div class="form-group">
+                        <label asp-for="Paciente.Documento"></label>
+                        <input disabled class="form-control" asp-for="Paciente.Documento">
+                    </div>
+                </div>
             </div>
-            <div class="form-group">
-                <label asp-for="Paciente.Apellido"></label>
-                <input disabled class="form-control" asp-for="Paciente.Apellido">
-                <span class="text-danger" asp-validation-for="Paciente.Apellido"></span>
+            <div class="row">
+                <div class="col-md-4">
+                    <div class="form-group">
+                        <label asp-for="FechaExamen"></label>
+                        <input disabled class="form-control" asp-for="FechaExamen">
+                    </div>
+                </div>
+                <div class="col-md-4">
+                    <div class="form-group">
+                        <label asp-for="TipoExamen"></label>
+                        <input disabled class="form-control" asp-for="TipoExamen">
+                    </div>
+                </div>
             </div>
-            <div class="form-group">
-                <label asp-for="Paciente.Documento"></label>
-                <input disabled class="form-control" asp-for="Paciente.Documento">
-                <span class="text-danger" asp-validation-for="Paciente.Documento"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="FechaExamen"></label>
-                <input disabled class="form-control" asp-for="FechaExamen">
-                <span class="text-danger" asp-validation-for="FechaExamen"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="TipoExamen"></label>
-                <input disabled class="form-control" asp-for="TipoExamen">
-                <span class="text-danger" asp-validation-for="TipoExamen"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="Detalle"></label>
-                <input disabled class="form-control" asp-for="Detalle">
-                <span class="text-danger" asp-validation-for="Detalle"></span>
+            <div class="row">
+                <div class="col-md-12">
+                    <div class="form-group">
+                        <label asp-for="Detalle"></label>
+                        <textarea disabled class="form-control" asp-for="Detalle" rows="6"></textarea>
+                    </div>
+                </div>
             </div>
         </div>
-        <div class="card-footer">
+        <div class="card-footer text-center">
             <button type="button" class="btn btn-primary" data-dismiss="modal">Cerrar</button>
         </div>
     </div>
