--- a/AdSanare.Core/Views/ExamenComplementario/Edit.cshtml
+++ b/AdSanare.Core/Views/ExamenComplementario/Edit.cshtml
@@ -1,29 +1,42 @@
 ﻿@model AdSanare.Entities.ExamenComplementario
+    <br />
     <div class="container-fluid">
-        <div class="card card-primary">
+        <div class="card card-maroon">
             <div class="card-header">
                 <h3 class="card-title">Editar Examen Complementario</h3>
             </div>
             <form asp-antiforgery="true" asp-action="Edit" method="post">
                 <input type="hidden" class="form-control" asp-for="Id" />
                 <div class="card-body">
-                    <div class="form-group">
-                        <label asp-for="FechaExamen"></label>
-                        <input class="form-control" asp-for="FechaExamen">
-                        <span class="text-danger" asp-validation-for="FechaExamen"></span>
+                    <div class="row">
+                        <div class="col-md-4">
+                            <div class="form-group">
+                                <label asp-for="FechaExamen"></label>
+                                <input class="form-control" asp-for="FechaExamen">
+                                <span class="text-danger" asp-validation-for="FechaExamen"></span>
+                            </div>
+                        </div>
+                        <div class="col-md-4">
+                            <div class="form-group">
+                                <label asp-for="TipoExamen"></label>
+                                <input class="form-control" asp-for="TipoExamen">
+                                <span class="text-danger" asp-validation-for="TipoExamen"></span>
+                            </div>
+                        </div>
                     </div>
-                    <div class="form-group">
-                        <label asp-for="TipoExamen"></label>
-                        <input class="form-control" asp-for="TipoExamen">
-                        <span class="text-danger" asp-validation-for="TipoExamen"></span>
+                    <div class="row">
+                        <div class="col-md-12">
+                            <div class="form-group">
+                                <label asp-for="Detalle"></label>
+                                <textarea class="form-control" asp-for="Detalle" rows="6"></textarea>
+                                <span class="text-danger" asp-validation-for="Detalle"></span>
+                            </div>
+                        </div>
                     </div>
-                    <div class="form-group">
-                        <label asp-for="Detalle"></label>
-                        <input class="form-control" asp-for="Detalle">
-                        <span class="text-danger" asp-validation-for="Detalle"></span>
-                    </div>
+
+
                 </div>
-                <div class="card-footer">
+                <div class="card-footer text-center">
                     <button type="submit" class="btn btn-primary">Guardar</button>
                 </div>
             </form>
