--- a/AdSanare.Core/Views/Paciente/Edit.cshtml
+++ b/AdSanare.Core/Views/Paciente/Edit.cshtml
@@ -1,54 +1,77 @@
 ﻿@model AdSanare.Entities.Paciente
+    <br />
     <div class="container-fluid">
-        <div class="card card-primary">
+        <div class="card card-maroon">
             <div class="card-header">
                 <h3 class="card-title">Editar Paciente</h3>
             </div>
             <form asp-antiforgery="true" asp-action="Edit" method="post">
                 <input type="hidden" class="form-control" asp-for="Id" />
                 <div class="card-body">
-                    <div class="form-group">
-                        <label asp-for="Nombre"></label>
-                        <input class="form-control" asp-for="Nombre">
-                        <span class="text-danger" asp-validation-for="Nombre"></span>
+                    <div class="row">
+                        <div class="col-md-6">
+                            <div class="form-group">
+                                <label asp-for="Nombre"></label>
+                                <input class="form-control" asp-for="Nombre">
+                                <span class="text-danger" asp-validation-for="Nombre"></span>
+                            </div>
+                        </div>
+                        <div class="col-md-6">
+                            <div class="form-group">
+                                <label asp-for="Apellido"></label>
+                                <input class="form-control" asp-for="Apellido">
+                                <span class="text-danger" asp-validation-for="Apellido"></span>
+                            </div>
+                        </div>
                     </div>
-                    <div class="form-group">
-                        <label asp-for="Apellido"></label>
-                        <input class="form-control" asp-for="Apellido">
-                        <span class="text-danger" asp-validation-for="Apellido"></span>
+                    <div class="row">
+                        <div class="col-md-4">
+                            <div class="form-group">
+                                <label asp-for="Documento"></label>
+                                <input class="form-control" asp-for="Documento">
+                                <span class="text-danger" asp-validation-for="Documento"></span>
+                            </div>
+                        </div>
+                        <div class="col-md-4">
+                            <div class="form-group">
+                                <label asp-for="FechaNacimiento"></label>
+                                <input class="form-control" asp-for="FechaNacimiento">
+                                <span class="text-danger" asp-validation-for="FechaNacimiento"></span>
+                            </div>
+                        </div>
+                        <div class="col-md-4">
+                            <div class="form-group">
+                                <label asp-for="Sexo"></label>
+                                <input class="form-control" asp-for="Sexo">
+                                <span class="text-danger" asp-validation-for="Sexo"></span>
+                            </div>
+                        </div>
                     </div>
-                    <div class="form-group">
-                        <label asp-for="Documento"></label>
-                        <input class="form-control" asp-for="Documento">
-                        <span class="text-danger" asp-validation-for="Documento"></span>
-                    </div>
-                    <div class="form-group">
-                        <label asp-for="FechaNacimiento"></label>
-                        <input class="form-control" asp-for="FechaNacimiento">
-                        <span class="text-danger" asp-validation-for="FechaNacimiento"></span>
-                    </div>
-                    <div class="form-group">
-                        <label asp-for="Sexo"></label>
-                        <input class="form-control" asp-for="Sexo">
-                        <span class="text-danger" asp-validation-for="Sexo"></span>
-                    </div>
-                    <div class="form-group">
-                        <label asp-for="EstadoCivil"></label>
-                        <input class="form-control" asp-for="EstadoCivil">
-                        <span class="text-danger" asp-validation-for="EstadoCivil"></span>
-                    </div>
-                    <div class="form-group">
-                        <label asp-for="Telefono"></label>
-                        <input class="form-control" asp-for="Telefono">
-                        <span class="text-danger" asp-validation-for="Telefono"></span>
-                    </div>
-                    <div class="form-group">
-                        <label asp-for="ObraSocialNumero"></label>
-                        <input class="form-control" asp-for="ObraSocialNumero">
-                        <span class="text-danger" asp-validation-for="ObraSocialNumero"></span>
+                    <div class="row">
+                        <div class="col-md-4">
+                            <div class="form-group">
+                                <label asp-for="EstadoCivil"></label>
+                                <input class="form-control" asp-for="EstadoCivil">
+                                <span class="text-danger" asp-validation-for="EstadoCivil"></span>
+                            </div>
+                        </div>
+                        <div class="col-md-4">
+                            <div class="form-group">
+                                <label asp-for="Telefono"></label>
+                                <input class="form-control" asp-for="Telefono">
+                                <span class="text-danger" asp-validation-for="Telefono"></span>
+                            </div>
+                        </div>
+                        <div class="col-md-4">
+                            <div class="form-group">
+                                <label asp-for="ObraSocialNumero"></label>
+                                <input class="form-control" asp-for="ObraSocialNumero">
+                                <span class="text-danger" asp-validation-for="ObraSocialNumero"></span>
+                            </div>
+                        </div>
                     </div>
                 </div>
-                <div class="card-footer">
+                <div class="card-footer text-center">
                     <button type="submit" class="btn btn-primary">Guardar</button>
                 </div>
             </form>
