--- a/AdSanare.Core/Views/Paciente/_BuscarPaciente.cshtml
+++ b/AdSanare.Core/Views/Paciente/_BuscarPaciente.cshtml
@@ -1,17 +1,24 @@
 ﻿@model AdSanare.Entities.Paciente
-
-<div class="form-group">
-    <label asp-for="Nombre" class="control-label"></label>
-    <input asp-for="Nombre" class="form-control" readonly />
-    <span asp-validation-for="Nombre" class="text-danger"></span>
-</div>
-<div class="form-group">
-    <label asp-for="Apellido" class="control-label"></label>
-    <input asp-for="Apellido" class="form-control" readonly />
-    <span asp-validation-for="Apellido" class="text-danger"></span>
-</div>
-<div class="form-group">
-    <label asp-for="Documento" class="control-label"></label>
-    <input asp-for="Documento" class="form-control" readonly />
-    <span asp-validation-for="Documento" class="text-danger"></span>
+<div class="row">
+    <div class="col-md-4">
+        <div class="form-group">
+            <label asp-for="Nombre" class="control-label"></label>
+            <input asp-for="Nombre" class="form-control" readonly />
+            <span asp-validation-for="Nombre" class="text-danger"></span>
+        </div>
+    </div>
+    <div class="col-md-4">
+        <div class="form-group">
+            <label asp-for="Apellido" class="control-label"></label>
+            <input asp-for="Apellido" class="form-control" readonly />
+            <span asp-validation-for="Apellido" class="text-danger"></span>
+        </div>
+    </div>
+    <div class="col-md-3">
+        <div class="form-group">
+            <label asp-for="Documento" class="control-label"></label>
+            <input asp-for="Documento" class="form-control" readonly />
+            <span asp-validation-for="Documento" class="text-danger"></span>
+        </div>
+    </div>
 </div>
