--- a/AdSanare.Core/Views/Paciente/_ListaPacientes.cshtml
+++ b/AdSanare.Core/Views/Paciente/_ListaPacientes.cshtml
@@ -1,11 +1,11 @@
 ﻿@model List<AdSanare.Entities.Paciente>
-<div class="card">
+<div class="card card-maroon">
     <div class="card-header">
         <h3 class="card-title">Lista de Pacientes</h3>
         <div class="card-tools">
             <div class="input-group input-group-sm" style="width: 150px;">
                 <div class="input-group input-group-sm pull-right">
-                    <a class="btn btn-primary btn-sm" asp-controller="Paciente" asp-action="Create" title="Agregar Paciente"><i class="fas fa-plus">Nuevo</i></a>
+                    <a class="btn btn-success" asp-controller="Paciente" asp-action="Create" title="Agregar Paciente"><i class="fas fa-plus">Nuevo</i></a>
                 </div>
             </div>
         </div>
