--- a/AdSanare.Core/Views/Servicio/Index.cshtml
+++ b/AdSanare.Core/Views/Servicio/Index.cshtml
@@ -28,14 +28,14 @@
         }
     </script>
 }
-<h1>Listado de Servicios</h1>
-<div class="card">
+<br />
+<div class="card card-maroon">
     <div class="card-header">
         <h3 class="card-title">Lista de Servicios</h3>
         <div class="card-tools">
             <div class="input-group input-group-sm" style="width: 150px;">
                 <div class="input-group input-group-sm pull-right">
-                    <a class="btn btn-primary btn-sm" asp-controller="Servicio" asp-action="Create" title="Agregar Servicio"><i class="fas fa-plus">Nuevo</i></a>
+                    <a class="btn btn-success" asp-controller="Servicio" asp-action="Create" title="Agregar Servicio"><i class="fas fa-plus">Nuevo</i></a>
                 </div>
             </div>
         </div>
