--- a/AdSanare.Core/Views/Usuarios/Create.cshtml
+++ b/AdSanare.Core/Views/Usuarios/Create.cshtml
@@ -1,52 +1,75 @@
 ﻿@model AdSanare.Core.Areas.Identity.Pages.Account.RegisterModel.InputModel
-<div class="card card-primary">
+<br />
+<div class="card card-maroon">
     <div class="card-header">
         <h3 class="card-title">Agregar Usuario</h3>
     </div>
     <form asp-antiforgery="true" asp-action="Create" method="post">
         <div class="card-body">
-            <div class="form-group">
-                <label asp-for="Name"></label>
-                <input class="form-control" asp-for="Name">
-                <span class="text-danger" asp-validation-for="Name"></span>
+            <div class="row">
+                <div class="col-md-4">
+                    <div class="form-group">
+                        <label asp-for="Name"></label>
+                        <input class="form-control" asp-for="Name">
+                        <span class="text-danger" asp-validation-for="Name"></span>
+                    </div>
+                </div>
+                <div class="col-md-4">
+                    <div class="form-group">
+                        <label asp-for="LastName"></label>
+                        <input class="form-control" asp-for="LastName">
+                        <span class="text-danger" asp-validation-for="LastName"></span>
+                    </div>
+                </div>
+                <div class="col-md-4">
+                    <div class="form-group">
+                        <label asp-for="Email"></label>
+                        <input class="form-control" asp-for="Email">
+                        <span class="text-danger" asp-validation-for="Email"></span>
+                    </div>
+                </div>
             </div>
-            <div class="form-group">
-                <label asp-for="LastName"></label>
-                <input class="form-control" asp-for="LastName">
-                <span class="text-danger" asp-validation-for="LastName"></span>
+            <div class="row">
+                <div class="col-md-4">
+                    <div class="form-group">
+                        <label asp-for="UserName"></label>
+                        <input class="form-control" asp-for="UserName">
+                        <span class="text-danger" asp-validation-for="UserName"></span>
+                    </div>
+                </div>
+                <div class="col-md-4">
+                    <div class="form-group">
+                        <label asp-for="EmployeeFileNumber"></label>
+                        <input class="form-control" asp-for="EmployeeFileNumber">
+                        <span class="text-danger" asp-validation-for="EmployeeFileNumber"></span>
+                    </div>
+                </div>
+                <div class="col-md-4">
+                    <div class="form-group">
+                        <label asp-for="PhoneNumber"></label>
+                        <input class="form-control" asp-for="PhoneNumber">
+                        <span class="text-danger" asp-validation-for="PhoneNumber"></span>
+                    </div>
+                </div>
             </div>
-            <div class="form-group">
-                <label asp-for="Email"></label>
-                <input class="form-control" asp-for="Email">
-                <span class="text-danger" asp-validation-for="Email"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="UserName"></label>
-                <input class="form-control" asp-for="UserName">
-                <span class="text-danger" asp-validation-for="UserName"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="EmployeeFileNumber"></label>
-                <input class="form-control" asp-for="EmployeeFileNumber">
-                <span class="text-danger" asp-validation-for="EmployeeFileNumber"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="PhoneNumber"></label>
-                <input class="form-control" asp-for="PhoneNumber">
-                <span class="text-danger" asp-validation-for="PhoneNumber"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="Password"></label>
-                <input class="form-control" asp-for="Password">
-                <span class="text-danger" asp-validation-for="Password"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="ConfirmPassword"></label>
-                <input class="form-control" asp-for="ConfirmPassword">
-                <span class="text-danger" asp-validation-for="ConfirmPassword"></span>
+            <div class="row">
+                <div class="col-md-4">
+                    <div class="form-group">
+                        <label asp-for="Password"></label>
+                        <input class="form-control" asp-for="Password">
+                        <span class="text-danger" asp-validation-for="Password"></span>
+                    </div>
+                </div>
+                <div class="col-md-4">
+                    <div class="form-group">
+                        <label asp-for="ConfirmPassword"></label>
+                        <input class="form-control" asp-for="ConfirmPassword">
+                        <span class="text-danger" asp-validation-for="ConfirmPassword"></span>
+                    </div>
+                </div>
             </div>
         </div>
-        <div class="card-footer">
+        <div class="card-footer text-center">
             <button type="submit" class="btn btn-primary">Agregar</button>
         </div>
     </form>
