--- a/AdSanare.Core/Views/Ingreso/Create.cshtml
+++ b/AdSanare.Core/Views/Ingreso/Create.cshtml
@@ -35,7 +35,7 @@
                     <div class="form-group">
                         <label asp-for="Paciente.Documento" class="control-label">Numero de Documento del Paciente</label>
                         <input id="DniPaciente" asp-for="Paciente.Documento" class="form-control control-label" placeholder="Ingrese el numero de documento del Paciente" />
-                        <span asp-validation-for="Paciente" class="text-danger"></span>
+                        <span asp-validation-for="Paciente.Documento" class="text-danger"></span>
                     </div>
                 </div>
                 <div class="col-md-1"></div>
