Obra social y domicilio

--- a/AdSanare.Core/Views/Paciente/Details.cshtml
+++ b/AdSanare.Core/Views/Paciente/Details.cshtml
@@ -53,8 +53,34 @@
             </div>
             <div class="col-md-4">
                 <div class="form-group">
+                    <label asp-for="ObraSocial.Descripcion"></label>
+                    <input disabled class="form-control" asp-for="ObraSocial.Descripcion">
+                </div>
+            </div>
+            <div class="col-md-4">
+                <div class="form-group">
                     <label asp-for="ObraSocialNumero"></label>
                     <input disabled class="form-control" asp-for="ObraSocialNumero">
+                </div>
+            </div>
+        </div>
+        <div class="row">
+            <div class="col-md-4">
+                <div class="form-group">
+                    <label asp-for="Domicilio.Calle"></label>
+                    <input disabled class="form-control" asp-for="Domicilio.Calle">
+                </div>
+            </div>
+            <div class="col-md-4">
+                <div class="form-group">
+                    <label asp-for="Domicilio.Localidad"></label>
+                    <input disabled class="form-control" asp-for="Domicilio.Localidad">
+                </div>
+            </div>
+            <div class="col-md-4">
+                <div class="form-group">
+                    <label asp-for="Domicilio.Provincia"></label>
+                    <input disabled class="form-control" asp-for="Domicilio.Provincia">
                 </div>
             </div>
         </div>
