--- a/AdSanare.Core/Views/Paciente/_NoResult.cshtml
+++ b/AdSanare.Core/Views/Paciente/_NoResult.cshtml
@@ -1,4 +1,4 @@
-﻿<div class="alert alert-warning alert-dismissible">
+﻿<div class="alert alert-warning alert-dismissible" id="divNoResult">
     <button type="button" class="close" data-dismiss="alert" aria-hidden="true">×</button>
     <h4><i class="icon fa fa-warning"></i> Información</h4>
     No se encontro un Paciente con el Número de Documento Ingresado.
