Ajustes de la vista 'Create' de Paciente

--- a/AdSanare.Core/Views/Paciente/Create.cshtml
+++ b/AdSanare.Core/Views/Paciente/Create.cshtml
@@ -25,69 +25,57 @@
                     </div>
                 </div>
             </div>
-            <div class="row">
-                <div class="col-md-3">
-                    <div class="form-group">
+            <div class="form-group">
+                <div class="row col-md-12">
+                    <div class="col-md-3">
                         <label asp-for="FechaNacimiento"></label>
                         <input class="form-control" asp-for="FechaNacimiento">
                         <span class="text-danger" asp-validation-for="FechaNacimiento"></span>
                     </div>
-                </div>
-                <div class="col-md-3">
-                    <div class="form-group">
+                    <div class="col-md-3">
                         <label asp-for="Sexo"></label>
                         <input class="form-control" asp-for="Sexo">
                         <span class="text-danger" asp-validation-for="Sexo"></span>
                     </div>
-                </div>
-                <div class="col-md-3">
-                    <div class="form-group">
+                    <div class="col-md-3">
                         <label asp-for="EstadoCivil"></label>
                         <input class="form-control" asp-for="EstadoCivil">
                         <span class="text-danger" asp-validation-for="EstadoCivil"></span>
                     </div>
-                </div>
-                <div class="col-md-3">
-                    <div class="form-group">
+                    <div class="col-md-3">
                         <label asp-for="Telefono"></label>
                         <input class="form-control" asp-for="Telefono">
                         <span class="text-danger" asp-validation-for="Telefono"></span>
                     </div>
                 </div>
             </div>
-            <div class="row">
-                <div class="col-md-4">
-                    <div class="form-group">
+            <div class="form-group">
+                <div class="row col-md-12">
+                    <div class="col-md-4">
                         <label asp-for="ObraSocial" class="control-label"></label>
                         <select class="form-control" asp-for="ObraSocial.Id" asp-items="@ViewBag.ObraSocial" title="Seleccione la Obra Social Correspondiente"></select>
                         <span asp-validation-for="ObraSocial.Id" class="text-danger"></span>
                     </div>
-                </div>
-                <div class="col-md-4">
-                    <div class="form-group">
+                    <div class="col-md-4">
                         <label asp-for="ObraSocialNumero"></label>
                         <input class="form-control" asp-for="ObraSocialNumero">
                         <span class="text-danger" asp-validation-for="ObraSocialNumero"></span>
                     </div>
                 </div>
             </div>
-            <div class="row">
-                <div class="col-md-4">
-                    <div class="form-group">
+            <div class="form-group">
+                <div class="row col-md-12">
+                    <div class="col-md-4">
                         <label asp-for="Domicilio.Calle"></label>
                         <input class="form-control" asp-for="Domicilio.Calle">
                         <span class="text-danger" asp-validation-for="Domicilio.Calle"></span>
                     </div>
-                </div>
-                <div class="col-md-4">
-                    <div class="form-group">
+                    <div class="col-md-4">
                         <label asp-for="Domicilio.Localidad"></label>
                         <input class="form-control" asp-for="Domicilio.Localidad">
                         <span class="text-danger" asp-validation-for="Domicilio.Localidad"></span>
                     </div>
-                </div>
-                <div class="col-md-4">
-                    <div class="form-group">
+                    <div class="col-md-4">
                         <label asp-for="Domicilio.Provincia"></label>
                         <input class="form-control" asp-for="Domicilio.Provincia">
                         <span class="text-danger" asp-validation-for="Domicilio.Provincia"></span>
